[gd_scene load_steps=2 format=3 uid="uid://devfcw0o6bxon"]

[ext_resource type="Script" uid="uid://cm07vcodrtmy3" path="res://Surprise/Scripts/high_level_ui.gd" id="1_kg3sa"]

[node name="HighLevelUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kg3sa")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Planet Killer - Multiplayer"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ServerBrowser" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ServerBrowserLabel" type="Label" parent="VBoxContainer/ServerBrowser"]
layout_mode = 2
text = "Available Servers:"

[node name="ServerList" type="ItemList" parent="VBoxContainer/ServerBrowser"]
layout_mode = 2
size_flags_vertical = 3

[node name="ServerBrowserButtons" type="HBoxContainer" parent="VBoxContainer/ServerBrowser"]
layout_mode = 2

[node name="RefreshButton" type="Button" parent="VBoxContainer/ServerBrowser/ServerBrowserButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Refresh"

[node name="JoinButton" type="Button" parent="VBoxContainer/ServerBrowser/ServerBrowserButtons"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Join Server"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="DirectConnect" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DirectConnectLabel" type="Label" parent="VBoxContainer/DirectConnect"]
layout_mode = 2
text = "Direct Connect:"

[node name="IPInput" type="LineEdit" parent="VBoxContainer/DirectConnect"]
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "Enter IP address (e.g., 192.168.1.100)"

[node name="PortInput" type="LineEdit" parent="VBoxContainer/DirectConnect"]
layout_mode = 2
text = "42069"
placeholder_text = "Port"

[node name="DirectConnectButton" type="Button" parent="VBoxContainer/DirectConnect"]
layout_mode = 2
text = "Connect"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Host" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Server"

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ready to connect"
horizontal_alignment = 1

[node name="PlayerCountLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Players: 0/8"
horizontal_alignment = 1

[connection signal="item_selected" from="VBoxContainer/ServerBrowser/ServerList" to="." method="_on_server_selected"]
[connection signal="pressed" from="VBoxContainer/ServerBrowser/ServerBrowserButtons/RefreshButton" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="VBoxContainer/ServerBrowser/ServerBrowserButtons/JoinButton" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxContainer/DirectConnect/DirectConnectButton" to="." method="_on_direct_connect_pressed"]
[connection signal="pressed" from="VBoxContainer/Host" to="." method="_on_server_pressed"]
